# webapp.rs

./: .codecov.yml  .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  Cargo.nix  Cargo.toml  Config.toml  Dockerfile  Dockerfile.build  Dockerfile.webapp  LICENSE  Makefile  README.md  appveyor.yml  build.rs  crates.js  default.nix  diesel.toml  help.html  index.html  settings.html  src-files.js  static  tls
.ci/: install_cargo_web
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml  flow_chart.mmd  tech_stack.mdd
.github/workflows/: ci.yml  gh-pages.yml
backend/: Cargo.toml  static
backend/benches/: server.rs
backend/src/: cbor.rs  cli.yaml  database.rs  http.rs  lib.rs  main.rs  server.rs  token.rs  websocket.rs
backend/src/cbor/: mod.rs  test.rs  tests.rs
backend/src/http/: login_credentials.rs  login_session.rs  logout.rs  mod.rs  test.rs  tests.rs
backend/src/http/login_credentials/: mod.rs  test.rs  tests.rs
backend/src/http/login_session/: mod.rs  test.rs  tests.rs
backend/src/http/logout/: mod.rs  test.rs  tests.rs
backend/src/server/: mod.rs  test.rs  tests.rs
backend/src/token/: mod.rs  test.rs
backend/tests/: backend.rs  server.rs
backend/tls/: cert.pem
ci/: install_capnp  install_cargo_web
doc/: aliases.js  dark.css  light.css  main.js  noscript.css  rustdoc.css  search-index.js  settings.html  source-files.js  source-script.js  storage.js
doc/app/: all.html  fn.main.html  index.html
doc/backend/: all.html  fn.main.html  index.html
doc/src/app/: main.rs.html
doc/src/backend/: main.rs.html
doc/src/webapp/: config.rs.html  lib.rs.html  schema.rs.html
doc/src/webapp_backend/: cbor.rs.html  database.rs.html  lib.rs.html
doc/src/webapp_frontend/: api.rs.html  lib.rs.html  route.rs.html  string.rs.html
doc/webapp/: API_URL_LOGIN_CREDENTIALS.v.html  API_URL_LOGIN_SESSION.v.html  API_URL_LOGOUT.v.html  CONFIG_FILENAME.v.html  all.html  constant.API_URL_LOGIN_CREDENTIALS.html  constant.API_URL_LOGIN_SESSION.html  constant.API_URL_LOGOUT.html  constant.CONFIG_FILENAME.html  index.html  sidebar-items.js
doc/webapp/config/: ApiConfig.t.html  PostgresConfig.t.html  ServerConfig.t.html  index.html  sidebar-items.js  struct.ApiConfig.html  struct.Config.html  struct.LogConfig.html  struct.PostgresConfig.html  struct.ServerConfig.html
doc/webapp/protocol/: index.html  sidebar-items.js
doc/webapp/schema/: index.html  sidebar-items.js
doc/webapp_backend/: all.html  index.html  sidebar-items.js  struct.Server.html
doc/webapp_backend/server/: struct.Server.html
doc/webapp_frontend/: all.html  fetch.m.html  fn.__wasm_bindgen_generated_run_app.html  fn.init_logger.html  fn.run_app.html  index.html  macro.fetch.html  sidebar-items.js  struct.RootComponent.html
frontend/: Cargo.toml  build.rs  index.html  main.js
frontend/css/: style.css
frontend/src/: api.rs  error.rs  lib.rs  main.rs  route.rs  routes.rs  string.rs
frontend/src/component/: content.rs  login.rs  mod.rs  register.rs  root.rs
frontend/src/components/: content.rs  login.rs  root.rs
frontend/src/service/: api.rs  cookie.rs  log.rs  mod.rs  reducer.rs  router.rs  session_timer.rs  timer.rs  uikit.rs
frontend/src/services/: mod.rs  reducer.rs  router.rs  uikit.rs  websocket.rs
frontend/static/: index.html
frontend/static/css/: style.css
migrations/: 001_create_sessions.sql
migrations/001_create_sessions/: up.sql
migrations/2018-07-04-055234_create_sessions/: down.sql  up.sql
nix/: backend.nix  frontend.nix  result  source.nix
nix/uikit/: common.nix  current_version.sh  default.nix  packages.nix  update.nix
search.index/: 03becef14119.js  0477c3bd50f5.js  0797a7268c6a.js  0e590a70d598.js  12370af6f06f.js  12d570896efa.js  13ba1231410d.js  1eece5420840.js  2424003ba391.js  34668606513a.js  34d48b31f6a3.js  3b87c4f43fe4.js  3dc2e90d626c.js  459dbe4477dc.js  56507e87100b.js  5f2c773d1678.js  68d437dd6989.js  6aa129c2651c.js  6d94121b22a7.js  728f9db03227.js  7699a1b7cf8c.js  76f01378e802.js  root.js
search.index/crateNames/: 5157a7a7a088.js
search.index/desc/: a25a4d25b546.js
search.index/entry/: b708d2e49a42.js  f9f9c2f3b562.js
search.index/function/: ed4dcf246c18.js
search.index/generic_inverted_index/: 518a687408fc.js
search.index/name/: 9c5e3df0ec22.js
search.index/normalizedName/: 15129e114363.js
search.index/path/: 426aa84c956f.js
search.index/type/: aed9204f1dcd.js
src/: app.rs  auth.rs  config.rs  csrf.rs  database.rs  lib.rs  main.rs  protocol.capnp  protocol.rs  rate_limit.rs  schema.rs  shared.rs
src/backend/: main.rs  mod.rs  server.rs  token.rs  websocket.rs
src/backend/database/: executor.rs  mod.rs  (+2 more)
src/client/: login.rs  main.rs  mod.rs  root.rs
src/frontend/: login.rs  main.rs  mod.rs  root.rs  routes.rs  style.scss
src/pages/: content.rs  login.rs  mod.rs
src/protocol/: mod.rs  model.rs  request.rs  response.rs
src/webapp/: app.rs.html  auth.rs.html  csrf.rs.html  database.rs.html  lib.rs.html  rate_limit.rs.html
static/: index.html
static/css/: style.css
style/: main.css
tests/: backend.rs  integration.rs
tls/: key.pem
trait.impl/server_fn/: trait.ServerFn.js
webapp/: all.html  index.html  sidebar-items.js
webapp/app/: fn.App.html  fn.login.html  fn.logout.html  fn.register.html  fn.renew_session.html  fn.shell.html  fn.whoami.html  index.html  sidebar-items.js  struct.AppProps.html  struct.Login.html  struct.Logout.html  struct.Register.html  struct.RenewSession.html  struct.Whoami.html
webapp/auth/: fn.create_token.html  fn.hash_password.html  fn.token_expiry.html  fn.verify_password.html  fn.verify_token.html  index.html  sidebar-items.js
webapp/csrf/: fn.validate.html  index.html  sidebar-items.js
webapp/database/: fn.create_session.html  fn.create_user.html  fn.delete_expired_sessions.html  fn.delete_session.html  fn.get_password_hash.html  fn.init.html  fn.pool.html  fn.session_exists.html  fn.update_session.html  fn.user_exists.html  index.html  sidebar-items.js
webapp/pages/: index.html  sidebar-items.js
webapp/rate_limit/: fn.check.html  index.html
(+136 files in other folders)
