[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["web-programming"]
description = "A web application completely written in Rust"
documentation = "https://docs.rs/webapp"
homepage = "https://github.com/saschagrunert/webapp.rs"
keywords = ["web", "app", "webapp", "wasm", "webassembly"]
license = "MIT"
name = "webapp"
readme = "README.md"
repository = "https://github.com/saschagrunert/webapp.rs"
version = "1.0.0"
edition = "2018"

[badges]
circle-ci = { repository = "saschagrunert/webapp.rs", branch = "master" }
codecov = { repository = "saschagrunert/webapp.rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
diesel = { version = "1.4.2", optional = true }
failure = "0.1.5"
serde = { version = "1.0.98", features = ["derive"]}
toml = "0.5.3"

[features]
backend = ["diesel"]

[workspace]
members = [
    "backend",
    "frontend",
]
