[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["web-programming"]
description = "A web application completely written in Rust"
documentation = "https://docs.rs/webapp"
homepage = "https://github.com/saschagrunert/webapp.rs"
keywords = ["web", "app", "webapp", "wasm", "webassembly"]
license = "MIT"
name = "webapp-backend"
readme = "../README.md"
repository = "https://github.com/saschagrunert/webapp.rs"
version = "1.0.0"
edition = "2018"

[badges]
circle-ci = { repository = "saschagrunert/webapp.rs", branch = "master" }
codecov = { repository = "saschagrunert/webapp.rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]
actix-http-test = "1.0.0"
actix-http = "1.0.1"
lazy_static = "1.4.0"
reqwest = { version = "0.10.5", features = ["blocking", "json"] }

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-files = "0.2.2"
actix-web = { version = "2.0.0", features = ["openssl"] }
anyhow = "1.0.31"
bytes = "0.5.4"
clap = { version = "2.33.1", features = ["yaml"] }
diesel = { version = "1.4.4", features = ["r2d2", "postgres"] }
env_logger = "0.7.1"
futures = "0.3.5"
jsonwebtoken = "7.1.0"
log = "0.4.8"
num_cpus = "1.13.0"
openssl = "0.10.29"
r2d2 = "0.8.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
thiserror = "1.0.19"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
webapp = { version = "1.0.0", path = "..", features = ["backend"] }
