[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["web-programming"]
description = "A web application completely written in Rust"
documentation = "https://docs.rs/webapp"
homepage = "https://github.com/saschagrunert/webapp.rs"
keywords = ["web", "app", "webapp", "wasm", "webassembly"]
license = "MIT"
name = "webapp-backend"
readme = "../README.md"
repository = "https://github.com/saschagrunert/webapp.rs"
version = "1.0.0"
edition = "2018"

[badges]
circle-ci = { repository = "saschagrunert/webapp.rs", branch = "master" }
codecov = { repository = "saschagrunert/webapp.rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]
actix-http-test = "2.1.0"
actix-http = "2.2.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web = { version = "3.3.2", features = ["openssl"] }
anyhow = "1.0.51"
bytes = "1.1.0"
clap = { version = "2.34.0", features = ["yaml"] }
diesel = { version = "1.4.8", features = ["r2d2", "postgres"] }
env_logger = "0.9.0"
futures = "0.3.25"
jsonwebtoken = "7.2.0"
log = "0.4.14"
num_cpus = "1.13.0"
openssl = "0.10.38"
r2d2 = "0.8.9"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.73"
thiserror = "1.0.30"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
webapp = { version = "1.0.0", path = "..", features = ["backend"] }
