[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["web-programming"]
description = "A web application completely written in Rust"
documentation = "https://docs.rs/webapp"
homepage = "https://github.com/saschagrunert/webapp.rs"
keywords = ["web", "app", "webapp", "wasm", "webassembly"]
license = "MIT"
name = "webapp-frontend"
readme = "../README.md"
repository = "https://github.com/saschagrunert/webapp.rs"
version = "1.0.0"
edition = "2018"

[badges]
circle-ci = { repository = "saschagrunert/webapp.rs", branch = "master" }
codecov = { repository = "saschagrunert/webapp.rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0.51"
sass-rs = "0.2.2"
url = "2.2.2"
webapp = { version = "1.0.0", path = ".." }

[dependencies]
anyhow = "1.0.51"
log = "0.4.14"
serde = { version = "1.0.147", features = ["derive"] }
stdweb = "0.4.20"
thiserror = "1.0.30"
wasm-bindgen = "0.2.78"
webapp = { version = "1.0.0", path = ".." }
yew = "0.17.4"
yew-router = "0.16.0"
